--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 LDAP Roles Plugin for The Fascinator
+
+See also https://sites.google.com/site/fascinatorhome/home/documentation/technical/documents/plugins/roles
