--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 LDAP Roles Plugin for The Fascinator
 
+See README.md
+
 See also https://sites.google.com/site/fascinatorhome/home/documentation/technical/documents/plugins/roles
